fixed links from stretching inside flex containers

--- a/css/src/normalize.css
+++ b/css/src/normalize.css
@@ -169,6 +169,7 @@
   color: var(--clr-accent);
   display: inline-block;
   gap: var(--xs, 5px);
+  height: max-content;
   outline: solid 2px transparent;
   outline-offset: -2px;
   transition-property: color;
